# esp32-projects

./: README.md
.github/workflows/: wifi-motion-rssi-c3.yml
Smartbutton-esp32-C3-Supermini/: README.md
Smartbutton-esp32-C3-Supermini-Plus-5/: CLAUDE.MD  README.md  sdkconfig  sdkconfig.defaults
Smartbutton-esp32-C3-Supermini-Plus-5/components/app_buttons/: app_buttons.c
Smartbutton-esp32-C3-Supermini-Plus-5/components/app_led/: CMakeLists.txt  app_led.c
Smartbutton-esp32-C3-Supermini-Plus-5/components/app_nvs/: app_nvs.c
Smartbutton-esp32-C3-Supermini-Plus-5/components/app_web/: app_web.c  html_ui.h
Smartbutton-esp32-C3-Supermini-Plus-5/main/: main.c
Smartbutton-esp32-C3-Supermini-SENSORS/: CMakeLists.txt  README.md
Smartbutton-esp32-C3-Supermini-SENSORS/components/app_buttons/: app_buttons.c
Smartbutton-esp32-C3-Supermini-SENSORS/components/app_nvs/: app_nvs.c
Smartbutton-esp32-C3-Supermini-SENSORS/components/app_web/: app_web.c  html_ui.h
Smartbutton-esp32-C3-Supermini-SENSORS/main/: main.c
Smartbutton-esp32-C3-Supermini/components/app_led/: CMakeLists.txt  app_led.c
Smartbutton-esp32-C3-Supermini/main/: main.c
Smartbutton-esp32-c5/: README.md
Smartbutton-esp32-c5-ws/: README.md  sdkconfig
Smartbutton-esp32-c5-ws/components/app_btn_leds/: CMakeLists.txt
Smartbutton-esp32-c5-ws/components/app_buttons/: CMakeLists.txt  app_buttons.c
Smartbutton-esp32-c5-ws/components/app_dns/: app_dns.c
Smartbutton-esp32-c5-ws/components/app_http/: app_http.c
Smartbutton-esp32-c5-ws/components/app_mqtt/: CMakeLists.txt  app_mqtt.c
Smartbutton-esp32-c5-ws/components/app_web/: CMakeLists.txt  app_web.c  html_ui.h
Smartbutton-esp32-c5-ws/components/app_wifi/: CMakeLists.txt  app_wifi.c
Smartbutton-esp32-c5-ws/components/app_ws/: CMakeLists.txt  app_ws.c  idf_component.yml
Smartbutton-esp32-c5-ws/main/: CMakeLists.txt
Smartbutton-esp32-c5/components/app_btn_leds/: app_btn_leds.c
Smartbutton-esp32-c5/components/app_buttons/: CMakeLists.txt  app_buttons.c
Smartbutton-esp32-c5/components/app_http/: CMakeLists.txt
Smartbutton-esp32-c5/components/app_nvs/: app_nvs.c
Smartbutton-esp32-c5/components/app_web/: app_web.c  html_ui.h
Smartbutton-esp32-c5/components/app_wifi/: app_wifi.c
Smartbutton-esp32-c5/main/: main.c
WiFi-Motion-RSSI-C3-Supermini/: .gitignore  CMakeLists.txt  EXPERIMENT_PROTOCOL.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PLAN.md  PLAN_ALTERNATIVO_PROCESADO_SENAL.md  README-ES.md  README.md  partitions.csv  sdkconfig.defaults
WiFi-Motion-RSSI-C3-Supermini/components/app_config/: app_config.c
WiFi-Motion-RSSI-C3-Supermini/components/captive_dns/: captive_dns.c
WiFi-Motion-RSSI-C3-Supermini/components/config_portal/: config_portal.c  idf_component.yml
WiFi-Motion-RSSI-C3-Supermini/components/csi_traffic/: CMakeLists.txt  csi_traffic.c
WiFi-Motion-RSSI-C3-Supermini/components/event_marker/: event_marker.c
WiFi-Motion-RSSI-C3-Supermini/components/motion_detector/: motion_detector.c
WiFi-Motion-RSSI-C3-Supermini/components/portal_auth/: CMakeLists.txt
WiFi-Motion-RSSI-C3-Supermini/components/recovery_button/: CMakeLists.txt
WiFi-Motion-RSSI-C3-Supermini/components/sample_metrics/: sample_metrics.c
WiFi-Motion-RSSI-C3-Supermini/components/telegram_notifier/: CMakeLists.txt  telegram_notifier.c  telegram_validation.c
WiFi-Motion-RSSI-C3-Supermini/firmware/: README.md  SHA256SUMS  flash-factory.sh  flash-prebuilt.sh
WiFi-Motion-RSSI-C3-Supermini/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
WiFi-Motion-RSSI-C3-Supermini/reports/: link-crossing-center-valid-04-comparison.json
WiFi-Motion-RSSI-C3-Supermini/tests/host/: CMakeLists.txt  test_motion_detector.c  test_portal_auth.c  test_validate_phase1.py
WiFi-Motion-RSSI-C3-Supermini/tests/host/stubs/: esp_err.h  esp_netif.h  esp_random.h  nvs.h  nvs_flash.h
WiFi-Motion-RSSI-C3-Supermini/tools/: bootstrap.sh  flash.sh  test-host.sh  validate_phase1.py
WiFi-Repeater/: AGENTS.md  PROGRESS.md  README.md  sdkconfig.defaults
WiFi-Repeater-WPA2-Enterprise/: AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  sdkconfig  sdkconfig.defaults
WiFi-Repeater-WPA2-Enterprise/main/: CMakeLists.txt  config_storage.c  config_storage.h  log_buffer.c  log_buffer.h  main.c  web_server.c  wifi_manager.c
WiFi-Repeater-WPA2-Enterprise/main/embedded_files/: app.js  index.html  styles.css
WiFi-Repeater/main/: CMakeLists.txt  config_storage.c  config_storage.h  main.c  web_server.c  wifi_manager.c  wifi_manager.h
WiFi-Repeater/main/embedded_files/: app.js  index.html  styles.css
components/app_config/: CMakeLists.txt
components/captive_dns/: CMakeLists.txt  captive_dns_protocol.c
components/config_portal/: CMakeLists.txt
components/csi_capture/: CMakeLists.txt  csi_capture.c
components/csi_features/: CMakeLists.txt  csi_features.c
components/event_marker/: CMakeLists.txt
components/motion_detector/: CMakeLists.txt
components/portal_auth/: portal_auth.c
components/recovery_button/: recovery_button.c
components/sample_metrics/: CMakeLists.txt
dataset/rejected/: link-crossing-center-01.json  link-crossing-center-interactive-01.json  link-crossing-center-valid-01.json  link-crossing-center-valid-02.json  link-crossing-center-valid-03.json
dataset/tuning/: link-crossing-center-valid-04.json
firmware/: BUILD-INFO.txt
main/: Kconfig.projbuild  app_main.c
reports/: link-crossing-center-valid-01.json  link-crossing-center-valid-04.json
reports/rejected/: link-crossing-center-valid-02-comparison.json  link-crossing-center-valid-02.json  link-crossing-center-valid-03-comparison.json  link-crossing-center-valid-03.json
tests/host/: CMakeLists.txt  test_app_config.c  test_captive_dns.c  test_csi_features.c  test_event_marker.c  test_experiment.py  test_portal_html.py  test_recovery_button.c  test_sample_metrics.c  test_telegram_validation.c
tests/host/stubs/: sdkconfig.h
tests/host/stubs/mbedtls/: constant_time.h  md.h
tools/: bootstrap.sh  build.sh  detector_replay.c  experiment.py
(+21 files in other folders)
